# MoveBaseSTM32V1.0

BABA03A-V3.0.0/: BABA03A_V3.0.0.PcbDoc  BABA03A_V3.0.0.PrjPcb  Connector.SchDoc  Mcu.SchDoc  Motor Control.SchDoc  Power.SchDoc
BABA03A-V3.0.0/__Previews/: BABA03A_V3.0.0.PcbDocPreview  Connector.SchDocPreview  Mcu.SchDocPreview  Motor Control.SchDocPreview  Power.SchDocPreview
BooMo_ConV2.0.0/: BooMo_ConV2.0.PcbDoc  BooMo_ConV2.0.PrjPcb  Connector.SchDoc  Mcu.SchDoc  Motor Control.SchDoc  Power.SchDoc
BooMo_ConV2.0.0/__Previews/: BooMo_ConV2.0.PcbDocPreview  Connector.SchDocPreview  Mcu.SchDocPreview  Motor Control.SchDocPreview
stm32f407MoveBase/Config/: commen.c  commen.h  config.c  config.h  delay.c  delay.h  spi.c  spi.h  stmflash.c  stmflash.h
stm32f407MoveBase/KDevelop/myProject/: CMakeLists.txt  main.cpp  myProject.cpp  myProject.h  myProject.kdev4
stm32f407MoveBase/KS103/: ks103.c  ks103.h
stm32f407MoveBase/MPU6050/: MPU6050.c  MPU6050_6Axis_MotionApps20.c
stm32f407MoveBase/Move/: AutomaticCharge.c  AutomaticCharge.h  CAN.c  CAN.h  DS18B20.c  DS18B20.h  Elevator.c  Elevator.h  I2C.c  I2C.h  IRreceive.c  IRreceive.h  LED.c  LED.h  MotorDC.c  MotorDC.h  Move2.c  Move2.h  MoveBase.c  MoveBase.h  OBD.c  OBD.h  ODO2PG.c  ODO2PG.h  Sonar.c  Sonar.h  Voltage.c  Voltage.h  motecSerial.c  motecSerial.h
stm32f407MoveBase/SerialRead/: ICmd.h  MyCmd.h  SerialBuf.c  SerialBuf.h  SerialCom.c  SerialCom.h  cmd.c  cmd.h  cmyserial.c  (+1 more)
引脚分配/: 充电头2.0版本.ioc
运动控制板原理图/: BABA03A.PcbDoc  BABA03A.PcbDoc.htm  BABA03A.PrjPcb  Connector.SchDoc  Mcu.SchDoc  Power.SchDoc
(+92 files in other folders)
